<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">project1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="startgame">Start Game</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="comfortablynumb">Comfortably Numb</string>
    <string name="player2">Player 2:</string>
    <string name="player1">Player 1:</string>
    <string name="howtoplay">How to Play</string>
    <string name="howtotext">Each player is assigned a brick color. Each player takes a turn placing a brick on top of the stack.  After the brick is released, if the brick stays, the other places takes a turn.  If the brick falls, the other player is awarded 1 point and the bricks are reset.  When a player reaches 5 points the game is over.</string>
    <string name="stackerdescription">Stacker logo</string>
    <string name="onekg">1 kg</string>
    <string name="twokg">2 kg</string>
    <string name="fivekg">5 kg</string>
    <string name="tenkg">10 kg</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="ReturnGame">Reset The Game</string>
    <string name="Player1Score">Winner! Player 1: 5</string>
    <string name="Player2Score">Loser! Player 2: 3</string>
    <string name="endGame">End</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="createaccount">Create Account</string>
    <string name="remember">Remember</string>
    <string name="confirmpassword">Confirm Password:</string>
    <string name="waitingscreen">Waiting for second player &#8230;</string>
    <string name="create_fail">Create Account Failed</string>
    <string name="exitgame">Exit Game</string>

</resources>
