<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity" android:orientation="vertical">

    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp" android:layout_weight="1">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/playeronescoretext"
                android:id="@+id/playerOneScore" android:layout_gravity="center|left" android:paddingLeft="5dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/playertwoscoretext"
                android:id="@+id/playerTwoScore" android:layout_gravity="center|right" android:paddingRight="5dp"/>
    </FrameLayout>
    <edu.msu.comfortablynumb.project1.BlockView
        android:id="@+id/blockView"
        android:layout_width="match_parent"
        android:layout_height="0dp" android:layout_weight="9"/>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp" android:layout_weight="2" android:layout_gravity="center"
            android:gravity="center">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onekg"
                android:id="@+id/button"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twokg"
                android:id="@+id/button2" android:layout_alignParentTop="true" android:layout_toRightOf="@+id/button"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fivekg"
                android:id="@+id/button3"
                android:layout_alignParentTop="true" android:layout_toRightOf="@+id/button2"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tenkg"
                android:id="@+id/button4" android:layout_gravity="right"
                android:layout_alignBottom="@+id/button3" android:layout_toRightOf="@+id/button3"/>

        <Button
            android:id="@+id/endGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button4"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/button4"
            android:onClick="onEndGame"
            android:text="@string/endGame" />

    </RelativeLayout>

</LinearLayout>
